# astro-up

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  _typos.toml  minisign.pub  minisign.pub.key  release-please-config.json  release-plz.toml
.claude/commands/: speckit.cleanup.run.md  speckit.doctor.md  speckit.drift.md  speckit.sync.apply.md  speckit.sync.backfill.md  speckit.sync.conflicts.md  speckit.sync.propose.md  speckit.verify.run.md
.claude/handover/: 001-repo-scaffold.md
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  lifecycle-test.yml  release.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md
crates/astro-up-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/astro-up-cli/src/: lib.rs  logging.rs  main.rs  state.rs
crates/astro-up-cli/src/commands/: backup.rs  catalog.rs  config.rs  install.rs  lifecycle_test.rs  mod.rs  restore.rs  scan.rs  search.rs  self_update.rs  show.rs  update.rs
crates/astro-up-cli/src/output/: json.rs  mod.rs  progress.rs  table.rs
crates/astro-up-cli/tests/: cli_integration.rs  cli_json.rs  cli_lifecycle_test.rs  cli_show.rs
crates/astro-up-cli/tests/fixtures/: AGENTS.md  CLAUDE.md  build_catalog.sql
crates/astro-up-cli/tests/snapshots/: cli_lifecycle_test__lifecycle_detection_toml.snap  cli_lifecycle_test__lifecycle_fail_report_json.snap  cli_lifecycle_test__lifecycle_report_json.snap  cli_show__cli_help.snap  cli_show__show_help.snap
crates/astro-up-core/: CHANGELOG.md  Cargo.toml  README.md
crates/astro-up-core/src/: adapters.rs  error.rs  events.rs  ledger.rs  lib.rs  lifecycle.rs  logging.rs  metrics.rs  release.rs  traits.rs  validation.rs
crates/astro-up-core/src/backup/: archive.rs  mod.rs  preview.rs  prune.rs  types.rs
crates/astro-up-core/src/catalog/: fetch.rs  lock.rs  manager.rs  manifest.rs  mod.rs  reader.rs  sidecar.rs  types.rs  verify.rs
crates/astro-up-core/src/config/: api.rs  defaults.rs  mod.rs  model.rs  store.rs
crates/astro-up-core/src/detect/: ascom.rs  cache.rs  discovery.rs  file.rs  hardware.rs  mod.rs  path.rs  pe.rs  registry.rs  scanner.rs  search.rs  wmi_apps.rs  wmi_driver.rs
crates/astro-up-core/src/download/: client.rs  mod.rs  purge.rs  stream.rs  types.rs
crates/astro-up-core/src/engine/: history.rs  lock.rs  mod.rs  orchestrator.rs  planner.rs  policy.rs  process.rs  version_cmp.rs
crates/astro-up-core/src/install/: elevation.rs  exit_codes.rs  hooks.rs  ledger.rs  mod.rs  process.rs  shortcut.rs  switches.rs  types.rs  uninstall.rs  wide.rs  zip.rs
crates/astro-up-core/src/snapshots/: astro_up_core__error__tests__error_messages_are_readable.snap  astro_up_core__events__tests__all_events_snapshot.snap
crates/astro-up-core/src/types/: backup.rs  checkver.rs  dependency.rs  detection.rs  hardware.rs  install.rs  mod.rs  software.rs  version.rs  versioning.rs
crates/astro-up-core/tests/: catalog_detection_roundtrip.rs  catalog_integration.rs  catalog_performance.rs  config_tests.rs  create_fixture_catalog.rs  detect_ascom.rs  detect_chain.rs  detect_hardware.rs  detect_pe.rs  detect_performance.rs  download_basic.rs  download_cancel.rs  download_hash.rs  download_purge.rs  download_resume.rs  download_throttle.rs  engine_orchestrator.rs  engine_planner.rs  engine_policy.rs  enum_validation.rs  error_display.rs  lifecycle_dry_run.rs  software_serde.rs  version_formats.rs
crates/astro-up-core/tests/config/: api_test.rs  defaults_test.rs  edge_cases_test.rs  layering_test.rs  mod.rs  store_test.rs  validation_test.rs
crates/astro-up-core/tests/config/snapshots/: config_tests__config__defaults_test__default_config.snap
crates/astro-up-core/tests/fixtures/catalog/: catalog.db  catalog.db.minisig  test.key
crates/astro-up-core/tests/snapshots/: error_display__error_messages_are_readable.snap  software_serde__minimal_snapshot.snap  software_serde__nina_snapshot.snap  version_formats__snapshot_check_format_compatibility_warnings.snap  version_formats__snapshot_date_mixed_separators.snap  version_formats__snapshot_format_mismatch_semver_with_date_string.snap  version_formats__snapshot_four_part_vs_three_part.snap  version_formats__snapshot_newer_than_catalog.snap  version_formats__snapshot_newer_than_catalog_date_format.snap  version_formats__snapshot_semver_lenient_two_part_vs_three_part.snap  version_formats__snapshot_semver_space_suffix.snap
crates/astro-up-gui/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
crates/astro-up-gui/capabilities/: default.json
crates/astro-up-gui/icons/: icon.icns
crates/astro-up-gui/src/: adapters.rs  commands.rs  lib.rs  log_layer.rs  main.rs  state.rs  supervisor.rs  tray.rs
docs/: index.md  package-lock.json  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/guide/: adding-manifests.md  architecture.md  backup.md  catalog.md  configuration.md  detection.md  development.md  getting-started.md  how-it-works.md  installation.md  installing.md  lifecycle-testing.md  quick-start.md  silent-installers.md  troubleshooting.md  what-is-astro-up.md
docs/reference/: catalog.md  cli.md  config.md  faq.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.test.ts  App.vue  features.ts  main.ts  styles.css  vite-env.d.ts
research/: 017-vue-frontend-README.md  017-vue-frontend-design.md  017-vue-frontend-mockup.html  018-theme-picker.html  debate-architecture-rewrite-rust-tauri.md  migration-plan-rust-tauri.md
specs/: lessons-learned.md
specs/001-repo-scaffolding/: plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/002-manifest-pipeline/: spec.md
specs/003-core-domain-types/: plan.md  quickstart.md  research.md  retrospective.md  spec.md  tasks.md
specs/004-configuration-system/: data-model.md  decisions.md  plan.md  quickstart.md  research.md  spec.md  (+2 more)
src/: lib.rs
(+256 files in other folders)
