[workspace]
resolver = "2"
members = ["crates/astro-up-core", "crates/astro-up-cli", "crates/astro-up-gui"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/astro-up"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
strum = { version = "0.26", features = ["derive"] }
trait-variant = "0.1"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
astro-up-core = { path = "crates/astro-up-core" }
insta = { version = "1", features = ["json", "toml"] }
pretty_assertions = "1"
rstest = "0.23"
