[workspace]
resolver = "2"
members = ["crates/astro-up-core", "crates/astro-up-cli", "crates/astro-up-gui"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/astro-up"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
strum = { version = "0.28", features = ["derive"] }
trait-variant = "0.1"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
garde = { version = "0.22", features = ["derive", "url"] }
humantime = "2"
humantime-serde = "1"
tracing = "0.1"
astro-up-core = { version = "0.1.0", path = "crates/astro-up-core" }
insta = { version = "1", features = ["json", "toml", "redactions"] }
pretty_assertions = "1"
rstest = "0.26"
