[package]
name = "astro-up"
version = "0.1.16"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
resolver = "2"
members = ["crates/astro-up-core", "crates/astro-up-cli", "crates/astro-up-gui"]

[workspace.package]
version = "0.1.12"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/astro-up"
rust-version = "1.85"

[workspace.lints.clippy]
# Lint groups (priority -1 so individual overrides win)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints (cherry-picked)
unwrap_used = "warn"
expect_used = "warn"
panic_in_result_fn = "warn"
unwrap_in_result = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
missing_assert_message = "warn"

# Pedantic — suppress noisy / non-actionable
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
redundant_else = "allow"
unnecessary_wraps = "allow"
doc_markdown = "allow"
unused_async = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_pub_crate = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
needless_pass_by_value = "allow"
ref_option = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
implicit_clone = "allow"
implicit_hasher = "allow"
no_effect_underscore_binding = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"

# Cargo — suppress dependency-version noise we can't control
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

# Nursery — suppress future-not-send (async trait objects)
future_not_send = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
trait_duplication_in_bounds = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
strum = { version = "0.28", features = ["derive"] }
trait-variant = "0.1"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
garde = { version = "0.22", features = ["derive", "url"] }
humantime = "2"
humantime-serde = "1"
tracing = "0.1"
astro-up-core = { version = "0.1.10", path = "crates/astro-up-core" }
insta = { version = "1", features = ["json", "toml", "redactions"] }
pretty_assertions = "1"
rstest = "0.26"
