[package]
name = "astro-up-cli"
version = "0.1.0"
description = "CLI for astro-up — clap + ratatui astrophotography software manager"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
astro-up-core.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dialoguer = "0.11"
directories = "6.0"
human-panic = "2"
ratatui = "0.29"
serde.workspace = true
serde_json.workspace = true
tabled = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
insta.workspace = true
