[package]
name = "astro-up-cli"
version = "0.1.2"
description = "CLI for astro-up — astrophotography software manager"
publish = true
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "astro-up"
path = "src/main.rs"

[dependencies]
astro-up-core.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dialoguer = "0.11"
directories = "6.0"
human-panic = "2"
indicatif = { version = "0.18", features = ["tokio"] }
ratatui = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.17"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
insta.workspace = true
predicates = "3"
