[package]
name = "astro-up-cli"
version = "0.1.12"
description = "CLI for astro-up — astrophotography software manager"
publish = false
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "astro-up-cli"
path = "src/main.rs"

[dependencies]
astro-up-core.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dialoguer = "0.11"
directories = "6.0"
human-panic = "2"
indicatif = { version = "0.18", features = ["tokio"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-zip", "compression-zip-deflate"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.20"
toml = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
insta.workspace = true
predicates = "3"
