[package]
name = "astro-up-core"
version = "0.1.0"
description = "Shared library for astro-up — types, detection, download, install, engine"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
trait-variant.workspace = true
semver.workspace = true
chrono.workspace = true
garde.workspace = true
humantime.workspace = true
tracing.workspace = true
rusqlite = { version = "0.35", features = ["bundled"] }
toml = "0.9"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
