[package]
name = "astro-up-core"
version = "0.1.0"
description = "Shared library for astro-up — types, detection, download, install, engine"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
trait-variant.workspace = true
semver.workspace = true
chrono.workspace = true
garde.workspace = true
humantime.workspace = true
tracing.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }
minisign-verify = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
sha2 = "0.10"
sysinfo = "0.38"
tokio = { version = "1", features = ["fs", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.9"
pelite = "0.10"
regex = "1"
directories = "6"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
wmi = "0.14"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
