[package]
name = "astro-up-core"
version = "0.1.22"
description = "Shared library for astro-up — types, detection, download, install, engine"
publish = false
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
trait-variant.workspace = true
semver.workspace = true
chrono.workspace = true
garde.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
tracing.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }
minisign-verify = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
sha2 = "0.11"
sysinfo = "0.38"
tokio = { version = "1", features = ["fs", "time", "sync", "process", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
zip = "2"
pelite = "0.10"
walkdir = "2"
regex = "1"
directories = "6"
fd-lock = "4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
wmi = "0.18"
windows = { version = "0.62", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Security", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Search", "Win32_System_Variant", "Win32_System_Com_StructuredStorage"] }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
