[package]
name = "astro-up-gui"
version = "0.1.0"
description = "Tauri v2 desktop app for astro-up — astrophotography software manager"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
astro-up-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }

[dev-dependencies]
insta.workspace = true
