[package]
name = "astro-up-gui"
version = "0.1.9"
description = "Tauri v2 desktop app for astro-up — astrophotography software manager"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
astro-up-core.workspace = true
chrono.workspace = true
dashmap = "6"
directories = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
insta.workspace = true
